tests/e2e/negative/n0006_wrong_arg_count.cryo
// @test: wrong_arg_count
// @expect: compile_fail
// @mode: raw
// @description: Wrong number of arguments should fail
// @tags: functions, errors

namespace NegArgCount;

function add(a: int, b: int) -> int {
    return a + b;
}

function main() -> int {
    const result: int = add(1, 2, 3);
    return 0;
}
